--- a/src/style/themes/_default.scss
+++ b/src/style/themes/_default.scss
@@ -10,6 +10,10 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
+body {
+    font-size: 1.4rem;
+}
+
 :root {
     --background-color: #F6F8F9;
     --primary-color: #0044D4;
