--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -40,3 +40,13 @@
 		#{$property}: $rem;
 	}
 }
+
+// Transitions
+// @include transition(color .3s ease);
+@mixin transition($args...) {
+	-webkit-transition: $args;
+	-moz-transition: $args;
+	-ms-transition: $args;
+	-o-transition: $args;
+	transition: $args;
+}
