--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -42,6 +42,8 @@ html {
   --font-weight-regular: 400;
   --border-radius: 4px;
   --muted-color: #efeef0;
+
+  --tooltip-background-color: #505A6F;
 }
 
 .r-component {
