--- a/src/components/r-input/r-input.scss
+++ b/src/components/r-input/r-input.scss
@@ -27,7 +27,8 @@
     margin: 0;
     border-style: inset;
     border: none;
-    box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 2px 0 rgba(var(--light-gray-color), 0.5) inset, 0 0 0 0 var(--primary-color);
+    //box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 2px 0 rgba(var(--light-gray-color), 0.5) inset, 0 0 0 0 var(--primary-color);
+    box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 0 #0044D4;
     text-transform: initial;
     letter-spacing: initial;
     font-family: var(--primary-font-stack);
@@ -37,7 +38,8 @@
     @include transition(box-shadow .05s ease);
 
     &:focus {
-        box-shadow: 0 0 0 1px var(--primary-color) inset, 0 0 0 0 rgba(var(--gray-color), 0.5) inset, 0 0 0 1px var(--primary-color);
+        //box-shadow: 0 0 0 1px var(--primary-color) inset, 0 0 0 0 rgba(var(--gray-color), 0.5) inset, 0 0 0 1px var(--primary-color);
+        box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4;
     }
 }
 
