--- a/src/components/r-button/r-button.scss
+++ b/src/components/r-button/r-button.scss
@@ -3,6 +3,7 @@
     height: auto;
     box-sizing: border-box;
     text-transform: capitalize;
+    text-decoration: none;
     text-align: center;
     vertical-align: baseline;
     user-select: none;
