--- a/src/components/r-checkbox/r-checkbox.scss
+++ b/src/components/r-checkbox/r-checkbox.scss
@@ -1,7 +1,5 @@
-input.field-checkbox[type=checkbox] {
+input.r-field-checkbox[type=checkbox] {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
     position: absolute;
     left: 0;
     top: 0;
@@ -10,45 +8,38 @@ input.field-checkbox[type=checkbox] {
     box-sizing: border-box;
     z-index: 10;
     cursor: pointer;
+
+    &:checked ~ .r-field-checkbox-style,
+    &:focus ~ .r-field-checkbox-style {
+        box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4;
+    }
+
+    &:checked ~ .r-field-checkbox-style .r-icon {
+        fill: var(--primary-color);
+        opacity: 1;
+    }
+
+    &[disabled] ~ .r-field-checkbox-style {
+        background: var(--background-color);
+    }
 }
 
-input.field-checkbox[type=checkbox]:checked ~ .field-checkbox-style, input.field-checkbox[type=checkbox]:focus ~ .field-checkbox-style {
-    box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4;
-}
-
-input.field-checkbox[type=checkbox]:checked ~ .field-checkbox-style .icon {
-    fill: #0044D4;
-    opacity: 1;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-    filter: alpha(opacity=100);
-}
-
-input.field-checkbox[type=checkbox][disabled] ~ .field-checkbox-style {
-    background: #F6F8F9;
-}
-
-.field-checkbox-style {
+.r-field-checkbox-style {
     cursor: pointer;
     box-sizing: border-box;
     width: 16px;
     height: 16px;
     position: absolute;
-    top: 2px;
-    left: 2px;
-    border-radius: 2px;
+    top: $space-xxs;
+    left: $space-xxs;
+    border-radius: $border-radius - 2;
     box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 0 #0044D4;
-    -webkit-transition: box-shadow 0.1s ease;
-    -moz-transition: box-shadow 0.1s ease;
-    -ms-transition: box-shadow 0.1s ease;
-    -o-transition: box-shadow 0.1s ease;
-    transition: box-shadow 0.1s ease;
+    @include transition(box-shadow .1s ease);
 }
 
-.field-checkbox-style .icon {
+.r-field-checkbox-style .r-icon {
     position: absolute;
-    top: -2px;
-    right: -2px;
+    top: -$space-xxs;
+    right: -$space-xxs;
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
 }
