--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,57 +1,56 @@
 html {
-  font-size: 62.5%;
-  text-size-adjust: 100%;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+    font-size: 62.5%;
+    text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 body, .article {
-    font-size: 14px;
-    font-size: 1.4rem;
-    line-height: 20px;
-    line-height: 2rem;
+    @include rem(font-size, $paragraph);
+    @include rem(line-height, $space-default);
     font-weight: 400;
 }
 
 :root {
-  --background-color: #F6F8F9;
-  --primary-color: #0044D4;
-  --primary-color-dark: #00236e;
-  --primary-color-light: #2600d4;
-  --primary-color-medium: #0034a1;
+    --background-color: #F6F8F9;
+    --primary-color: #0044D4;
+    --primary-color-dark: #00236e;
+    --primary-color-light: #2600d4;
+    --primary-color-medium: #0034a1;
 
-  --warning-color: #F1C400;
-  --red-color: #E53935;
-  --gray-color: #A1B2C1;
-  --text-color: #0D2B3E;
+    --warning-color: #F1C400;
+    --red-color: #E53935;
+    --gray-color: #A1B2C1;
+    --text-color: #0D2B3E;
 
-  --saturated-red-color: #ff201b;
-  --saturated-warning-color: #f1c400;
+    --saturated-red-color: #ff201b;
+    --saturated-warning-color: #f1c400;
 
-  --warning-color-dark: #8b7100;
-  --warning-color-medium: #be9b00;
-  --warning-color-light: #d8af00;
+    --warning-color-dark: #8b7100;
+    --warning-color-medium: #be9b00;
+    --warning-color-light: #d8af00;
 
-  --red-color-dark: #9f1815;
-  --red-color-medium: #cd1e1a;
-  --red-color-light: #e2231e;
+    --red-color-dark: #9f1815;
+    --red-color-medium: #cd1e1a;
+    --red-color-light: #e2231e;
 
-  --light-red-color: #FFD4D3;
-  --light-gray-color: #C4CED8;
-  --light-blue-color: #DCE7FE;
-  --light-green-color: #C4F7CA;
-  --light-yellow-color: #FFF0AD;
-  --faint-gray-color: #E1E7EA;
+    --light-red-color: #FFD4D3;
+    --light-gray-color: #C4CED8;
+    --light-blue-color: #DCE7FE;
+    --light-green-color: #C4F7CA;
+    --light-yellow-color: #FFF0AD;
+    --faint-gray-color: #E1E7EA;
 
-  --primary-font-stack: 'Roboto', sans-serif;
-  --secondary-font-stack: 'Montserrat', sans-serif;
+    --primary-font-stack: 'Roboto', sans-serif;
+    --secondary-font-stack: 'Montserrat', sans-serif;
 
-  --font-weight-regular: 400;
-  --border-radius: 4px;
-  --muted-color: #efeef0;
+    --font-weight-regular: 400;
+    --border-radius: 4px;
+    --muted-color: #efeef0;
+    --muted-text-color: #6B7384;
 
-  --tooltip-background-color: #505A6F;
+    --tooltip-background-color: #505A6F;
 }
 
 .r-component {
